Fix margin spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,11 @@ div {
   display: inline-block;
   text-align: center;
   margin: 0;
+  vertical-align: middle;
 }
 
 .one {
   display: inline-block;
-  background-color: #0f0;
   text-align: center;
   padding: 1em;
   max-width: 25em;
@@ -23,11 +23,12 @@ div {
 
 .two {
   display: inline-block;
-  background-color: #f00;
   max-width: 25em;
   text-align: left;
-  margin-top: 0;
-  padding: .5em;
+  margin-top: 1.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-bottom: 1.5em;
 }
 
 body {
@@ -45,7 +46,7 @@ img {
   max-width: 25em;
   width: 100%;
   padding-top: .5em;
-  padding-bottom: 0;
+  padding-bottom: .4em;
 }
 
 h2 {
@@ -53,17 +54,20 @@ h2 {
   color: #333;
   font-weight: bold;
   text-align: left;
+  margin-top: .4em;
   margin-bottom: 0;
   padding: 0;
+
 }
 
 p {
   font-family: Lato, sans-serif;
   line-height: 1.5;
+  margin-top: 1em;
   margin-bottom: 1.5em;
   color: #666;
   text-align: left;
-  padding: .5em;
+  padding-top: .75em;
 }
 
 a {
@@ -80,4 +84,5 @@ a {
   border-radius: .75em;
   padding: .75em;
   text-align: left;
+  margin-bottom: 1.5em;
 }
